refactor: editing javadoc and excluding null product_group from body when passed in query